# sft_demo

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  run_trains.sh
Notebooks/: sft_model_inferance.ipynb
aua/Qwen/Qwen2.5-3B/gen_clarify_q/Qwen2.5-3B/best_checkpoint/: ambigqa.dev_4h.clarify.clarify_q_s10.jsonl  ambigqa.dev_4h.clarify.clarify_q_s10.metrics.json
aua/Qwen/Qwen2.5-3B/gen_clarify_q/Qwen2.5-3B/runs/Apr08_03-21-19_gosh/: events.out.tfevents.1775604079.gosh.665509.0
aua/google/gemma-2-2b/gen_clarify_q/gemma-2-2b/best_checkpoint/: ambigqa.dev_4h.clarify.clarify_q_s10.jsonl  ambigqa.dev_4h.clarify.clarify_q_s10.metrics.json
aua/google/gemma-2-2b/gen_clarify_q/gemma-2-2b/runs/Apr08_01-33-37_gosh/: events.out.tfevents.1775597617.gosh.458636.0
aua/meta-llama/Llama-3.2-1B/gen_clarify_q/Llama-3.2-1B/best_checkpoint/: ambigqa.dev_4h.clarify.clarify_q_s10.jsonl  ambigqa.dev_4h.clarify.clarify_q_s10.metrics.json
aua/meta-llama/Llama-3.2-1B/gen_clarify_q/Llama-3.2-1B/runs/Apr08_00-30-01_gosh/: events.out.tfevents.1775593801.gosh.345911.0
aua/meta-llama/Llama-3.2-3B/gen_clarify_a/Llama-3.2-3B/best_checkpoint/: ambigqa.dev_4h.clarify.clarify_q_s10.clarify_a.jsonl
aua/meta-llama/Llama-3.2-3B/gen_clarify_a/Llama-3.2-3B/runs/Apr12_03-10-51_gosh/: events.out.tfevents.1775949051.gosh.28048.0
aua/meta-llama/Llama-3.2-3B/gen_clarify_q/Llama-3.2-3B/best_checkpoint/: ambigqa.dev_4h.clarify.clarify_q_s10.jsonl  ambigqa.dev_4h.clarify.clarify_q_s10.metrics.json
bot/: bot.py
train/: __init__.py  helpers.py  inferance.py  inference.py  main.py  metrics.py  sft_train.py
(+3 files in other folders)
