[project]
name = "sft-demo"
version = "0.1.0"
description = "Demo training script for sft with clarifying questions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "peft>=0.18.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "transformers>=5.5.0",
    "trl>=1.0.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
name = "pytorch-cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }