[project]
name = "sft-demo"
version = "0.1.0"
description = "Demo training script for sft with clarifying questions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bert-score>=0.3.13",
    "bitsandbytes>=0.49.2; sys_platform != 'darwin'",
    "datasets>=4.8.4",
    "nltk>=3.9.4",
    "peft>=0.18.1",
    "regex>=2026.4.4",
    "rouge-score>=0.1.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "transformers>=5.5.0",
    "trl>=1.0.0",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
name = "pytorch-cu126"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform != 'darwin'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" },
]
